--- a/main.css
+++ b/main.css
@@ -164,8 +164,8 @@ body {
   width: 8vmin;
   height: 11vmin;
   border-radius: 51% 49% 47% 53%/44% 45% 55% 69%;
-  background-color: #f672b0;
-  background-image: linear-gradient(to top, #ee5286, #ee5286);
+  background-color: #8A2BE2;
+  background-image: linear-gradient(to top, #8A2BE2, #0000FF);
   transform-origin: bottom center;
   opacity: 0.9;
   box-shadow: inset 0 0 2vmin rgba(255, 255, 255, 0.5);
@@ -185,7 +185,7 @@ body {
   transform-origin: bottom left;
   border-radius: 4vmin 10vmin 4vmin 4vmin;
   transform: translate(0%, 18%) rotateX(70deg) rotate(-43deg);
-  background-image: linear-gradient(to top, #ee5286, #ee5286);
+  background-image: linear-gradient(to top, #8A2BE2, #0000FF);
   z-index: 1;
   opacity: 0.8;
 }
@@ -227,7 +227,7 @@ body {
   height: var(--h);
   border-top-right-radius: var(--h);
   border-bottom-left-radius: var(--h);
-  background-image: linear-gradient(to top, rgba(20, 117, 122, 0.4), #095721);
+  background-image: linear-gradient(to top, #8A2BE2, #0000FF);
 }
 .flower__line__leaf--1 {
   transform: rotate(70deg) rotateY(30deg);
