--- a/style.css
+++ b/style.css
@@ -1,22 +1,27 @@
 body {
     font-family: Arial, sans-serif;
     text-align: center;
+    background: rgb(138,43,226);
+background: linear-gradient(0deg, rgba(138,43,226,1) 0%, rgba(0,0,255,1) 100%);
 }
 
 h1 {
-    color: #333;
+    color: #000000;
 }
-
+h2{
+    color: #ffffff;
+}
 img {
     max-width: 100%;
     height: auto;
     margin: 20px 0;
+    border-radius: 10px;
 }
 
 button {
     padding: 10px 20px;
     font-size: 16px;
-    background-color: #007BFF;
+    background-color: #540098;
     color: #fff;
     border: none;
     cursor: pointer;
@@ -24,5 +29,5 @@ button {
 }
 
 button:hover {
-    background-color: #0056b3;
+    background-color: #410075;
 }
